# gl_template

./: .clang-format  .clang-tidy  .gitignore  .hdoc.toml  .lsan_suppressions  CMakeLists.txt  CMakePresets.json  DOCUMENTATION_IMPLEMENTATION.md  Doxyfile  README.md  doxide.yaml  mkdocs.yml
.github/workflows/: ci.yml  deploy-pages.yml  docs.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  Sanitizers.cmake
data/shaders/: cube_es3.frag  cube_es3.vert  cube_gl46.frag  cube_gl46.vert
docs/: ARCHITECTURE.md  EMSCRIPTEN_PLAN.md
scripts/: README.md  build-all.sh  build-web.sh  ci-local.sh  format-check.sh  format-fix.sh  generate-coverage.sh  profile-memory.sh  static-analysis.sh  test-all.sh  test-sanitizers-manual.sh  validate-shaders.sh
src/: CMakeLists.txt  TestDoc.hpp  VibeGLApp.cpp  VibeGLApp.hpp  main.cpp
src/core/: Application.cpp  Application.hpp  GLIncludes.hpp  Platform.hpp  Result.hpp
src/rendering/: ShaderManager.cpp  ShaderManager.hpp  StbImage.cpp  TextureLoader.cpp  TextureLoader.hpp
tests/: CMakeLists.txt  test_main.cpp
